# Omnihand-2025-SDK

./: CMakeLists.txt  README.md  README.zh_CN.md  build.sh
assets/urdf/: omnihand_left.urdf
document/: API_CPP.md  API_PYTHON.md
document/en/: API_CPP.md  API_PYTHON.md
document/zh_cn/: API_CPP.md  API_PYTHON.md
examples/: CMakeLists.txt  main.cc
node/: CMakeLists.txt
node/node_msg/: CMakeLists.txt
node/node_msg/msg/: MotorVel.msg  TactileSensorData.msg
node/scripts/: left_motor_pos_publisher.py  motor_pos_pub.py  motor_pos_subscriber.py
node/src/: hand_node.cpp  hand_node.h  main.cpp
python/: CMakeLists.txt  MANIFEST.in  README.md  binding.cc
python/agibot_hand/: __init__.py  __init__.pyi
python/example/: demo_get_hardware_info.py  demo_monitor_current.py  demo_monitor_error.py  demo_monitor_temperature.py  demo_play_motion.py  demo_sensor_touch.py  demo_set_angle.py  demo_set_motion.py  demo_set_motor.py  demo_set_position.py  demo_set_torque.py  demo_tactile_sensor.py  teleop_test_o10.npy
python/example/conf/: hardware_conf.yaml
python/tools/: gui.py
src/: CMakeLists.txt  c_agibot_hand.cc  c_agibot_hand.h  c_agibot_hand_base.cc  c_agibot_hand_base.h  proto.h
src/can_bus_device/: c_can_bus_device.cc  c_can_bus_device.h
src/can_bus_device/zlg_usb_canfd/: c_zlg_usbcanfd_sdk.cc  c_zlg_usbcanfd_sdk.h
src/conf/: a.yaml
src/implementation/c_agibot_hand_can/: c_agibot_hand_can.cc  c_agibot_hand_can.h
src/implementation/c_agibot_hand_rs/: c_agibot_hand_rs.cc  c_agibot_hand_rs.h
src/kinematics_solver/: kinematics_solver.cc  kinematics_solver.h
src/rs_485_device/: crc16.h  rs_485_device.cc  rs_485_device.h
